Fixed issue with zip dropdown being cutoff
Removed `overflow: hidden` from .highlighted .wrap
Changed positioning of text in header
Removed extra height from mobile header

--- a/assets/sass/components/_finder.scss
+++ b/assets/sass/components/_finder.scss
@@ -45,6 +45,7 @@
     .chosen-drop {
       border: none;
       border-radius: 0;
+      color: black;
     }
     .chosen-results li.highlighted {
       background: $orange;
