--- a/assets/sass/components/_page-headers.scss
+++ b/assets/sass/components/_page-headers.scss
@@ -32,7 +32,6 @@
 
     .page-header {
       position: relative;
-      top: 3em;
       padding: 3.5em 0;
       width: 100%;
       min-height: 12em;
@@ -43,7 +42,7 @@
       color: #FFF;
 
       .text {
-        bottom: 6em;
+        bottom: 3em;
         position: absolute;
         text-align: center;
         width: 100%;
