--- a/assets/sass/layout/_layout.scss
+++ b/assets/sass/layout/_layout.scss
@@ -16,7 +16,6 @@
 .highlighted {
 	.wrap {
 		max-width: 100%;
-    overflow: hidden;
 	  @include clearfix;
   }
 }
